# cdk-visor

./: .gitignore  README.md  eslint.config.js  index.html  package-lock.json  package.json  playwright.config.ts  tsconfig.json  vite.config.ts  vitest.config.ts
.github/workflows/: ci.yml
e2e/: viewer.spec.ts
public/demo/: ApiStack.template.json  NetworkStack.template.json  manifest.json  tree.json
public/demo/src/: api-stack.ts  app.ts  network-stack.ts
scripts/: gen-demo.mjs
src/: App.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  rust-toolchain.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
src/components/: Badge.tsx  Canvas.tsx  GraphCanvas.tsx  Inspector.tsx  JsonBlock.tsx  RelationsView.tsx  Resizer.tsx  SearchOverlay.tsx  SourceView.tsx  TopBar.tsx  TreePanel.tsx  Welcome.tsx
src/lib/: demo.test.ts  dnd.ts  docs.ts  graph.test.ts  graph.ts  highlight.test.ts  highlight.ts  icons.test.ts  icons.ts  layout.ts  loader.ts  model.test.ts  model.ts  references.test.ts  references.ts  search.test.ts  search.ts  tauri.ts  url.test.ts  url.ts  useResizable.ts
src/types/: cdk.ts
