[package]
name = "cdk-visor"
version = "0.1.0"
description = "An interactive, fullscreen viewer for AWS CDK applications"
edition = "2021"
# Tauri 2's dependency tree currently needs a recent stable toolchain.
rust-version = "1.88"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
